@@ -1,0 +1,66 @@
+.\" Redistribution and use in source and binary forms, with
+.\" or without modification, are permitted provided that the
+.\" following conditions are met:
+.\" 
+.\" 1. Redistributions of source code must retain this list
+.\"    of conditions and the following disclaimer.
+.\" 2. Redistributions in binary form must reproduce this
+.\"    list of conditions and the following disclaimer in the
+.\"    documentation and/or other materials provided with the
+.\"    distribution.
+.\" 
+.\" THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND
+.\" CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED
+.\" WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+.\" WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
+.\" PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
+.\" COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
+.\" INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+.\" CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+.\" PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+.\" DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
+.\" CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+.\" CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
+.\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+.\" SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
+.\" DAMAGE.
+.Dd March 13, 2011
+.Dt THECL 1
+.Os GensokyOS
+.Sh NAME
+.Nm thecl
+.Nd Touhou level script tool
+.Sh SYNOPSIS
+.Nm
+.Ar command Ns Ar #
+.Op Ar input Op Ar output
+.Sh DESCRIPTION
+The
+.Nm
+utility extracts files from an archive or creates a new archive from a set of files.
+The following commands are available:
+.Bl -tag -width Ds
+.It Ar c Ns Ar # Op Ar input Op Ar output
+Compiles a level script.
+.It Ar d Ns Ar # Op Ar input Op Ar output
+Dumps a level script.
+.It Ar h
+Displays the usage along with the supported versions.
+.It Ar V
+Displays the program version.
+.El
+.Pp
+Replace the
+.Ar #
+option by the level script format version requested.
+Refer to the output of the h command for a list of supported formats.
+.Sh EXIT STATUS
+The
+.Nm
+utility exits with 0 on success, 1 on error.
+.\" TODO: .Sh EXAMPLES
+.Sh SEE ALSO
+.Lk http://code.google.com/p/thtk "Project homepage"
+.Sh SECURITY CONSIDERATIONS
+Invalid data may not be properly handled.
+Do not operate on untrusted files.
